--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -27,6 +27,7 @@
     // 📜 You can learn the differences between JSX and HTML syntax from the React docs here:
     // https://reactjs.org/docs/dom-elements.html#differences-in-attributes
     // test
+    // test again
     ReactDOM.render(element, document.getElementById('root'))
   </script>
 </body>
